# state-space-models

./: .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: ci-testing.yml
state_space_models/: dataset.py  lti.py
tests/: conftest.py  requirements.txt  test_dataset.py  test_lti.py
