[metadata]
name = state_space_models
version = 0.1.0
author = Patrik Reizinger
author_email = prmedia17@gmail.com
description = State space models with scipy
license_file = LICENSE
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpatrik96/state-space-models
project_urls =
    Bug Tracker = https://github.com/rpatrik96/state-space-models
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[tool:pytest]
norecursedirs =
    .git
    dist
    build
addopts =
    --strict
    --doctest-modules
    --durations=0

[coverage:report]
exclude_lines =
    pragma: no-cover
    pass

[flake8]
max-line-length = 120
exclude = .tox,*.egg,build,temp
select = E,W,F
doctests = True
verbose = 2
# https://pep8.readthedocs.io/en/latest/intro.html#error-codes
format = pylint
# see: https://www.flake8rules.com/
ignore =
    E731
    # Do not assign a lambda expression, use a def
    W504
    # Line break occurred after a binary operator
    F401
    # Module imported but unused
    F841
    # Local variable name is assigned to but never used
    W605
    # Invalid escape sequence 'x'

# setup.cfg or tox.ini
[check-manifest]
ignore =
    *.yml
    .github
    .github/*


